--- a/src/pages/button_style.css
+++ b/src/pages/button_style.css
@@ -4,12 +4,13 @@
 
 .btn {
     background: linear-gradient(#000, #000) padding-box,
-                linear-gradient(60deg, #00f, #00e8ff) border-box;
-    color: white;
+                linear-gradient(to right, #00f0ff, #5200ff, #ff2df7) border-box;
+    color: #fff;
     padding: 8px 15px;
-    border: 2px solid transparent;
+    border: 1px solid transparent;
     border-radius: 40px;
     display: inline-block;
     /* font-size: 28px; */
   }
+  
   
